# sketchup-live-c-api

./: .gitignore  .gitmodules  .rubocop.yml  .solargraph.yml  CMakeLists.txt  Gemfile  LICENSE  README.md
cext/: CMakeLists.txt  debug.rb  example_config.h.in  traceup_config.hpp.in  traceup_extension.cpp
cext/cmake/: FindSketchUpRuby.cmake
cext/image_lib/: CMakeLists.txt  image.cpp  image.h  image.hpp  trace.cpp  trace.h
cext/image_lib/slapi/: color.cpp  color.h  color.hpp  utilities.cpp  utilities.h  utilities.hpp
cext/ruby/: example_extension.cpp  framework.h  utilities.cpp  utilities.h
cext/ruby_extension/: CMakeLists.txt  example_extension.cpp
cext/scripts/: !load_external.rb  debug.rb  depcheck.bat  depcheck.cmake
cext/tests/: CMakelists.txt  image_tests.cpp
cext/tests/image_lib/: CMakelists.txt  image_tests.cpp
cext/tests/image_lib/slapi/: color_tests.cpp
cext/tests/ruby/: CMakelists.txt  compact_fuzzer.rb  compacting_tests.cpp  test_extension.cpp
cext/tests/slapi/: color_tests.cpp
cmake/: DependencyTools.cmake  FindSketchUpAPI.cmake  FindSketchUpRuby.cmake  ProjectOptions.cmake  ProjectWarnings.cmake  RubyExtension.cmake
docs/: cmake.md  using-live-c-api.md  visual-studio.md  xcode.md
ruby/: live-c-api.rb
ruby/live-c-api/: main.rb
